# curviriver

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  conftest.py  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  test.yml
ci/requirements/: environment-dev.yml  environment.yml
curviriver/: __init__.py  _utils.py  curvilinear.py  exceptions.py  interpolation.py  smoothing.py
doc/source/: conf.py  gallery.rst  gallery.yml  index.rst  usage.rst
doc/source/_static/: switcher.json
doc/source/examples/: curvilinear.ipynb
tests/: test_interpolate_na.py
